visual(achv): fix CSS when header is collapsed

--- a/Files/src/css/component/achievements/achievements-list.component.scss
+++ b/Files/src/css/component/achievements/achievements-list.component.scss
@@ -190,7 +190,7 @@
 
 	&.shrink-header {
 		.show-filter {
-			margin: 0;
+			margin: 0 15px 0 0;
 			ng-select {
 				visibility: hidden;
 				max-height: 0;
